# Gamesys

./: Gamesys.cabal  README.txt
src/: Main.hs  Series.hs  Tests.hs
