name:           Gamesys
category:       Game
version:        1.0
license:        BSD3
cabal-version:  >=1.6
license-file:   LICENSE
build-type:     Simple
author:         Bas van Gijzel
maintainer:     Bas van Gijzel <bmv@cs.nott.ac.uk>
stability:      experimental
homepage:       http://www.cs.nott.ac.uk/~bmv/
copyright:      Copyright (C) 2015 Bas van Gijzel
synopsis:       Solution to a coding exercise requiring to compute a series. 
description:    Solution to a coding exercise requiring to compute a series.

Extra-Source-Files:
                           DotNETCodingTest.pdf

Library
  build-depends:
    base                   >= 4        && < 5,
    containers             >= 0.3      && < 0.6,
    QuickCheck             >= 2        && < 3,
    ieee754                >= 0.7.6    && < 1

  ghc-options:     -Wall
  hs-source-dirs:
    src

  exposed-modules:
    Series
    Tests

executable gamesys
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4 && < 5,
                   QuickCheck < 3,
                   ieee754 >= 0.7.6,
                   containers
  ghc-options:     -Wall

source-repository head
  Type:     git
  Location: https://github.com/nebasuke/Gamesys